--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Recomendations for learning R at all levels from the TS community"
+title: "Recommendations for learning R at all levels from the TS community"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   html_document:
@@ -62,16 +62,16 @@ ggvis is in beta state but here's the package on GitHub and a recent video where
 - video:  https://www.youtube.com/watch?feature=player_embedded&v=LOXe6Eu59As
 
 
-Also worth mentioning is Ramnath's (author of slidify) rcharts package but that requires a bit more knowledge and skill.  It also plays well with slidify and shiny:
+Also worth mentioning is Ramnath's (author of slidify) rCharts package but that requires a bit more knowledge and skill.  It also plays well with slidify and shiny:
 
 - Gallery:  http://rcharts.io/gallery/
 - Home site::  http://rcharts.io/
 - http://rcharts.io/howitworks/
 - Intro video https://www.youtube.com/watch?v=nYr5KzaR1Vc
 
-### R and Reproducable research
+### R and Reproducible research
 
-**Then the document management and publishing platforms: github, pandoc/Rwhatever, Rmarkdown, github-blogging.**
+**Then the document management and publishing platforms: GitHub, pandoc/Rwhatever, Rmarkdown, GitHub-blogging.**
 
 For document management above all learn knitr.  It is the key to reproducible research in R and it works very well with RStudio.  
 
@@ -85,7 +85,7 @@ From there learn Rmarkdown to produce html docs (These are Rmd files) here's a l
 To make a LaTeX doc you use a Rnw file.  Here's an absolute beginner script:
 - https://github.com/yihui/knitr-examples/blob/master/002-minimal.Rnw
 
-Github is a great place to store and manage anything.  It's DropBox on steroids.  It's wee suited for code sharing, including projects.  It's free if the code is publicly available.  It costs for private repos unless you're a student (you get 5 free).  GitHub is based on the git language (or program; depends on your view).  Dropbox uses git as well.  I barely scratch the surface of what github is capable of doing.  But RStudio is set up to work with GitHub so it makes learning the actual git language unnecessary.  I know a few commands and that's it.  
+GitHub is a great place to store and manage anything.  It's DropBox on steroids.  It's wee suited for code sharing, including projects.  It's free if the code is publicly available.  It costs for private repos unless you're a student (you get 5 free).  GitHub is based on the git language (or program; depends on your view).  Dropbox uses git as well.  I barely scratch the surface of what GitHub is capable of doing.  But RStudio is set up to work with GitHub so it makes learning the actual git language unnecessary.  I know a few commands and that's it.  
 - https://github.com/
 
 There's another git repo management I'd recommend second that has free private repos called gitBucket.  I'll give the link and also a video I made on using bitbucket:
@@ -96,7 +96,7 @@ There's another git repo management I'd recommend second that has free private r
 The blogging aspect or webpage facet of GitHub is discussed here:
 - https://pages.github.com/
 
-It's more than blogging.  It's a full web hosting capability.  If you have your own domain name you can even use that and GitHub hosts for free.  Here's an example of a simple page where I house afew things:
+It's more than blogging.  It's a full web hosting capability.  If you have your own domain name you can even use that and GitHub hosts for free.  Here's an example of a simple page where I house a few things:
 
 - http://trinker.github.io/card/contact
 - http://trinker.github.io/hlm/#1
@@ -108,7 +108,7 @@ Pandoc converts between documents awesomely.  It's pretty easy to use.  I have a
 
 ### Presenting, Publishing and Interactive web-applications
 
-I already mentioned knitr in publishing.  RStudio really is a terrific way to publish as it links GitHub and knitr + R.  You can also throw things up quickly vie Rpubs (http://blog.rstudio.org/2012/06/04/announcing-rpubs/) which are documents made in RStudio that you want to share.  Here's my Rpubs.  I don't use too often but there's diversity there with documents and slidify slides.  You can send these documents to the net just by clicking a a button.
+I already mentioned knitr in publishing.  RStudio really is a terrific way to publish as it links GitHub and knitr + R.  You can also throw things up quickly vie Rpubs (http://blog.rstudio.org/2012/06/04/announcing-rpubs/) which are documents made in RStudio that you want to share.  Here's my Rpubs.  I don't use too often but there's diversity there with documents and slidify slides.  You can send these documents to the net just by clicking a button.
 - http://rpubs.com/trinker
 
 slidify is a terrific way to make html presentations (and even more) but RStudio also has a quick way to make presentations as seen here:
